--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,5 +1,5 @@
 
-@if (currentUser()) {
+@if (isFullLayoutVisible()) {
   <div class="flex h-screen bg-gray-900 text-gray-100">
     <app-sidebar></app-sidebar>
     <main class="flex-1 flex flex-col overflow-hidden">
