--- a/src/components/sidebar/sidebar.component.html
+++ b/src/components/sidebar/sidebar.component.html
@@ -1,11 +1,10 @@
-
 <aside 
   class="flex flex-col bg-gray-800 text-gray-300 transition-all duration-300 ease-in-out"
   [class.w-64]="isSidebarOpen()" 
   [class.w-20]="!isSidebarOpen()">
   
   <div class="flex items-center justify-between h-16 px-4 border-b border-gray-700">
-    <span class="text-white font-bold text-xl" [class.hidden]="!isSidebarOpen()">RestôApp</span>
+    <span class="font-bold text-xl" [class.hidden]="!isSidebarOpen()"><span class="text-white">Chef</span><span class="text-blue-400">OS</span></span>
     <button (click)="toggleSidebar()" class="p-2 rounded-md hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
       <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
